Self/playorg/Unpackaged/Config/objects/Holding_Group__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Financialy Responsible</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Holding Groups</relationshipLabel>
        <relationshipName>Bank_Account_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Holding Groups (Group Owner)</relationshipLabel>
        <relationshipName>Holding_Groups_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Holdings_Value__c</fullName>
        <label>Holdings Value</label>
        <summarizedField>Mutual_Fund__c.Holdings_Amount__c</summarizedField>
        <summaryForeignKey>Mutual_Fund__c.Bank_Account_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Holdings Group</label>
    <nameField>
        <label>Holdings Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holding Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>